Accessibility improvements: Added landmark tags, sorted the header order, added alt text to the dynamic plot, improved the colour contrast issues and fixed label issues with form elements.

--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,42 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans%7CRoboto');
 
-@font-face 
+html, body
 {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
-div 
+/* HTML5 fallback styles for older browsers */
+main, section, header, footer, nav, figure, figcaption
+{
+    display: block;
+    box-sizing: border-box;
+}
+/* ---------------------------------------- */
+
+h1, h2, h3, h4, h5, h6
 {
     font-family: 'Roboto', sans-serif;
+    color: #707070;
 }
 
-h1, h2, h3, h4, h5, h6, .header
+h1
 {
-    font-family: 'Roboto', sans-serif;
-    color: #212121;
+    font-size: 1.75em;
+}
+
+h2
+{
+    font-size: 1.25em;
+    margin-top: 0;
+}
+
+a, a:focus, a:hover, a:visited
+{
+    color: #046dc3;
 }
 
 a
 {
-    color: #fc6721;
     text-decoration: none;
 }
 
